--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}" />
+
+    <!-- Javascript -->
+    <script src="{{url_for('static', filename='/js/script.js')}}" async></script>
+
+    <!-- ICONS -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
     <title>Home Page</title>
 </head>
 <body>
-    
+    <div id="navigation-sticky">
+    <!-- Navigation Bar -->
+        <div class="navbar bg-light navbar-light navbar-expand-lg sticky-top"></div>
+            <div class="container">
+
+                <a href="index.html" class="navbar-brand">
+                    <img src="flask_app/static/images/name.jpg" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="" class="nav-link"></a></li>
+                        <li class="nav-item"><a href="" class="nav-link"></a></li>
+                        <li class="nav-item"><a href="" class="nav-link"></a></li>
+                        <li class="nav-item"><a href="" class="nav-link"></a></li>
+                    </ul>
+                </div>
+
+
+            </div>
+        
+        <!-- Background Blue -->
+        <div class="bg-primary" style="height:75vh;"></div>
+    </div>
+    <!-- Background Grey -->
+    <div class="bg-secondary" style="height:150vh;"></div>
 </body>
 </html>
