--- a/portfolio/flask_app/static/style.css
+++ b/portfolio/flask_app/static/style.css
@@ -9,9 +9,9 @@ html, body {
 /* *============ MEDIA QUERIES ============* */
 
 /* Devices under 768px */
-@media (max-width: 767.98px) {
+/* @media (max-width: 767.98px) {
 
-}
+} */
 
 /* *============ BOOTSTRAP ============* */
 
