--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -45,6 +45,8 @@
             </div>
         </nav>
 
+        <div class="container-lg">Hello! This is where Content will go!</div>
+
     </div>
 </body>
 
