Added socials at bottom of page

--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -45,7 +45,28 @@
             </div>
         </nav>
 
-        <div class="container-lg">Hello! This is where Content will go!</div>
+        <div class="container">
+            <div class="upper">Sophie Slagle</div>
+            <div class="lower">Sophie Slagle</div>
+            <div class="inside">Web Developer</div>
+        </div>
+
+        <div class="container-lg">Hello! This is where Content will go! I will add an image that will be revealed to the
+            left of this!</div>
+
+        <!-- Socials -->
+        <ul class="socials">
+            <li class="liSocials">
+                <a class="linkSocials" href="https://github.com/Soapie14">
+                    <i class="uil uil-github"></i>
+                </a>
+            </li>
+            <li class="liSocials">
+                <a class="linkSocials" href="https://www.linkedin.com/in/sophie-slagle-2633a822a/">
+                    <i class="uil uil-linkedin"></i>
+                </a>
+            </li>
+        </ul>
 
     </div>
 </body>
