--- a/portfolio/flask_app/static/style.css
+++ b/portfolio/flask_app/static/style.css
@@ -1,16 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-html, body {
-    margin: 0;
+html,
+body {
     height: 100%;
+    margin: 0;
     background:
         linear-gradient(rgb(205, 180, 219), transparent),
         linear-gradient(to top left, rgb(189, 224, 254), transparent),
         linear-gradient(to top right, rgb(255, 175, 204), transparent);
     background-blend-mode: screen;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     font-family: 'Roboto', sans-serif;
     font-size: large;
 }
+
 /* 
 .body {
     background:
@@ -21,15 +25,83 @@ html, body {
 } */
 
 .nav {
+    display: flex;
+    justify-content: end;
     color: rgb(189, 224, 254);
 }
+
+
+
+/* *============ SOCIALS ============* */
+
+
+HTML CSSResult Skip Results Iframe EDIT ON body {
+    margin: 0;
+    padding: 0;
+    background: #262626;
+}
+
+.socials {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.liSocials {
+    list-style: none;
+    margin: 0 15px;
+}
+
+.linkSocials {
+    position: relative;
+    display: block;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    line-height: 63px;
+    background: #333;
+    border-radius: 50%;
+    font-size: 30px;
+    color: #666;
+    transition: .5s;
+}
+
+.linkSocials::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: #A2D2FF;
+    transition: .5s;
+    transform: scale(.9);
+    z-index: -1;
+}
+
+.linkSocials:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #A2D2FF;
+}
+
+.linkSocials:hover {
+    color: #A2D2FF;
+    box-shadow: 0 0 5px #A2D2FF;
+    text-shadow: 0 0 5px #A2D2FF;
+}
+
+
 
 /* *============ MEDIA QUERIES ============* */
 
 /* Devices under 768px */
-@media (max-width: 767.98px) {
+@media (max-width: 767.98px) {}
 
-}
 /* *============ COLOR SCHEME ============* */
 /* 
 CDB4DB or 205, 180, 219 -light purple
