working on text boxes

--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -30,7 +30,7 @@
                 <a class="navbar-brand" href="/"></a>
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/projects">Projects</a>
@@ -45,14 +45,9 @@
             </div>
         </nav>
 
-        <div class="container">
-            <div class="upper">Sophie Slagle</div>
-            <div class="lower">Sophie Slagle</div>
-            <div class="inside">Web Developer</div>
+        <div class="information">
+            <div class="container-lg">Sophie Slagle</div>
         </div>
-
-        <div class="container-lg">Hello! This is where Content will go! I will add an image that will be revealed to the
-            left of this!</div>
 
         <!-- Socials -->
         <ul class="socials">
