--- a/portfolio/flask_app/static/style.css
+++ b/portfolio/flask_app/static/style.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
+/* *============ COLOR SCHEME ============* */
+/* 
+CDB4DB or 205, 180, 219 -light purple
+FFC8DD or 255, 200, 221 - light pink
+FFAFCC or 255, 175, 204 - pink 
+BDE0FE or 189, 224, 254 - light blue
+A2D2FF or 162, 210, 255 - blue 
+*/
+
+    /* *============ BODY ============* */
+
 html,
 body {
     height: 100%;
@@ -15,14 +26,8 @@ body {
     font-size: large;
 }
 
-/* 
-.body {
-    background:
-        linear-gradient(rgb(205, 180, 219), transparent),
-        linear-gradient(to top left, rgb(189, 224, 254), transparent),
-        linear-gradient(to top right, rgb(255, 175, 204), transparent);
-    background-blend-mode: screen;
-} */
+
+    /* *============ NAVBAR ============* */
 
 .nav {
     display: flex;
@@ -30,100 +35,96 @@ body {
     color: rgb(189, 224, 254);
 }
 
+    /* *============ TEXT INFO ============* */
 
-
-/* *============ SOCIALS ============* */
-
-
-HTML CSSResult Skip Results Iframe EDIT ON body {
-    margin: 0;
-    padding: 0;
-    background: #262626;
-}
-
-.socials {
-    margin: 0;
-    padding: 0;
+.information {
     display: flex;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
-.liSocials {
-    list-style: none;
-    margin: 0 15px;
-}
-
-.linkSocials {
-    position: relative;
-    display: block;
-    width: 60px;
-    height: 60px;
-    text-align: center;
-    line-height: 63px;
-    background: #333;
-    border-radius: 50%;
-    font-size: 30px;
-    color: #666;
-    transition: .5s;
-}
-
-.linkSocials::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background: #A2D2FF;
-    transition: .5s;
-    transform: scale(.9);
-    z-index: -1;
-}
-
-.linkSocials:hover::before {
-    transform: scale(1.1);
-    box-shadow: 0 0 15px #A2D2FF;
-}
-
-.linkSocials:hover {
-    color: #A2D2FF;
-    box-shadow: 0 0 5px #A2D2FF;
-    text-shadow: 0 0 5px #A2D2FF;
-}
+    /* *============ SOCIALS ============* */
 
 
+    HTML CSSResult Skip Results Iframe EDIT ON body {
+        margin: 0;
+        padding: 0;
+        background: #262626;
+    }
 
-/* *============ MEDIA QUERIES ============* */
+    .socials {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        position: absolute;
+        top: 94%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 
-/* Devices under 768px */
-@media (max-width: 767.98px) {}
+    .liSocials {
+        list-style: none;
+        margin: 0 15px;
+    }
 
-/* *============ COLOR SCHEME ============* */
-/* 
-CDB4DB or 205, 180, 219 -light purple
-FFC8DD or 255, 200, 221 - light pink
-FFAFCC or 255, 175, 204 - pink 
-BDE0FE or 189, 224, 254 - light blue
-A2D2FF or 162, 210, 255 - blue 
-*/
+    .linkSocials {
+        position: relative;
+        display: block;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        line-height: 42px;
+        background: #333;
+        border-radius: 50%;
+        font-size: 30px;
+        color: #666;
+        transition: .5s;
+    }
 
-/* *============ BOOTSTRAP ============* */
+    .linkSocials::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        background: #A2D2FF;
+        transition: .5s;
+        transform: scale(.9);
+        z-index: -1;
+    }
 
-/* Extra small(xs) devices (portrait phones, less than 576px)
+    .linkSocials:hover::before {
+        transform: scale(1.1);
+        box-shadow: 0 0 15px #A2D2FF;
+    }
+
+    .linkSocials:hover {
+        color: #A2D2FF;
+        box-shadow: 0 0 5px #A2D2FF;
+        text-shadow: 0 0 5px #A2D2FF;
+    }
+
+
+
+    /* *============ MEDIA QUERIES ============* */
+
+    /* Devices under 768px */
+    @media (max-width: 767.98px) {}
+
+
+    /* *============ BOOTSTRAP ============* */
+
+    /* Extra small(xs) devices (portrait phones, less than 576px)
 no media query since this is the default in bootstrap */
 
-/* Small (sm) devices (landscape phones, 576px and up)
+    /* Small (sm) devices (landscape phones, 576px and up)
 @media (min-width:576px) */
 
-/* Medium (md) devices (tablets, 768px and up)
+    /* Medium (md) devices (tablets, 768px and up)
 @media (min-width: 786px) {...} */
 
-/* Large (lg) devices (desktops, 992px and up)
+    /* Large (lg) devices (desktops, 992px and up)
 @media(min-width:992 px) */
 
-/* Extra Large (xl) devices (large desktops, 1200 px and up)
+    /* Extra Large (xl) devices (large desktops, 1200 px and up)
 @media(min-width:1200 px) */
