--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -19,6 +19,11 @@
     <!-- ICONS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,500;1,100&display=swap" rel="stylesheet">
+
     <title>Sophie's Portfolio</title>
 </head>
 
@@ -46,7 +51,7 @@
         </nav>
 
         <div class="information">
-            <div class="container-lg">Sophie Slagle</div>
+            <div class="text">Sophie Slagle</div>
         </div>
 
         <!-- Socials -->
