added divider and paragraph

--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -22,7 +22,9 @@
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,500;1,100&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,500;1,100&display=swap"
+        rel="stylesheet">
 
     <title>Sophie's Portfolio</title>
 </head>
@@ -51,7 +53,16 @@
         </nav>
 
         <div class="information">
-            <div class="text">Sophie Slagle</div>
+            <div class="name_header"><u>Sophie Slagle</u></div>
+            <div class="name_description"> Web Developer </div>
+        </div>
+
+        <div class="divider">
+            <hr class="rounded">
+        </div>
+
+        <div class="paragraph">
+            <p class="info">Former Division I Softball coach turned passionate tech student seeking to use proven skills in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
         </div>
 
         <!-- Socials -->
