--- a/portfolio/flask_app/static/style.css
+++ b/portfolio/flask_app/static/style.css
@@ -13,8 +13,8 @@ A2D2FF or 162, 210, 255 - blue
 /* *============ FONTS ============* */
 
 /* 
-font-family: 'Lobster', cursive;
-font-family: 'Roboto', sans-serif;
+font-family: 'Lobster', cursive;  :headers
+font-family: 'Roboto', sans-serif;  :text
  */
 
 /* 
@@ -22,7 +22,7 @@ Headlines:
 Paragraphs:
  */
 
-    /* *============ BODY ============* */
+/* *============ BODY ============* */
 
 html,
 body {
@@ -35,12 +35,12 @@ body {
     background-blend-mode: screen;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lobster', cursive;
     font-size: large;
 }
 
 
-    /* *============ NAVBAR ============* */
+/* *============ NAVBAR ============* */
 
 .nav {
     display: flex;
@@ -48,99 +48,122 @@ body {
     color: rgb(189, 224, 254);
 }
 
-    /* *============ TEXT INFO ============* */
+/* *============ TEXT INFO ============* */
 
 .information {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     font-family: 'Lobster', cursive;
 
 }
 
-    /* *============ SOCIALS ============* */
+.name_header {
+    display: flex;
+    justify-content: center;
+    font-size: 80px;
+}
 
 
-    HTML CSSResult Skip Results Iframe EDIT ON body {
-        margin: 0;
-        padding: 0;
-        background: #262626;
-    }
+.name_description {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+}
 
-    .socials {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        position: absolute;
-        top: 94%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
+/* *============ PARAGRAPH/INFO ============* */
 
-    .liSocials {
-        list-style: none;
-        margin: 0 15px;
-    }
+.paragraph {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    padding: 5%;
+}
 
-    .linkSocials {
-        position: relative;
-        display: block;
-        width: 40px;
-        height: 40px;
-        text-align: center;
-        line-height: 42px;
-        background: #333;
-        border-radius: 50%;
-        font-size: 30px;
-        color: #666;
-        transition: .5s;
-    }
-
-    .linkSocials::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        background: #A2D2FF;
-        transition: .5s;
-        transform: scale(.9);
-        z-index: -1;
-    }
-
-    .linkSocials:hover::before {
-        transform: scale(1.1);
-        box-shadow: 0 0 15px #A2D2FF;
-    }
-
-    .linkSocials:hover {
-        color: #A2D2FF;
-        box-shadow: 0 0 5px #A2D2FF;
-        text-shadow: 0 0 5px #A2D2FF;
-    }
+/* *============ SOCIALS ============* */
 
 
+HTML CSSResult Skip Results Iframe EDIT ON body {
+    margin: 0;
+    padding: 0;
+    background: #262626;
+}
 
-    /* *============ MEDIA QUERIES ============* */
+.socials {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    position: absolute;
+    top: 94%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
-    /* Devices under 768px */
-    @media (max-width: 767.98px) {}
+.liSocials {
+    list-style: none;
+    margin: 0 15px;
+}
+
+.linkSocials {
+    position: relative;
+    display: block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 42px;
+    background: #333;
+    border-radius: 50%;
+    font-size: 30px;
+    color: #666;
+    transition: .5s;
+}
+
+.linkSocials::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: #A2D2FF;
+    transition: .5s;
+    transform: scale(.9);
+    z-index: -1;
+}
+
+.linkSocials:hover::before {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #A2D2FF;
+}
+
+.linkSocials:hover {
+    color: #A2D2FF;
+    box-shadow: 0 0 5px #A2D2FF;
+    text-shadow: 0 0 5px #A2D2FF;
+}
 
 
-    /* *============ BOOTSTRAP ============* */
 
-    /* Extra small(xs) devices (portrait phones, less than 576px)
+/* *============ MEDIA QUERIES ============* */
+
+/* Devices under 768px */
+@media (max-width: 767.98px) {}
+
+
+/* *============ BOOTSTRAP ============* */
+
+/* Extra small(xs) devices (portrait phones, less than 576px)
 no media query since this is the default in bootstrap */
 
-    /* Small (sm) devices (landscape phones, 576px and up)
+/* Small (sm) devices (landscape phones, 576px and up)
 @media (min-width:576px) */
 
-    /* Medium (md) devices (tablets, 768px and up)
+/* Medium (md) devices (tablets, 768px and up)
 @media (min-width: 786px) {...} */
 
-    /* Large (lg) devices (desktops, 992px and up)
+/* Large (lg) devices (desktops, 992px and up)
 @media(min-width:992 px) */
 
-    /* Extra Large (xl) devices (large desktops, 1200 px and up)
+/* Extra Large (xl) devices (large desktops, 1200 px and up)
 @media(min-width:1200 px) */
