--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -65,6 +65,7 @@
             <p class="info">Former Division I Softball coach turned passionate tech student seeking to use proven skills in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
         </div>
 
+            <!-- Need to fix socials with scrolling -->
         <!-- Socials -->
         <ul class="socials">
             <li class="liSocials">
