--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -65,6 +65,11 @@
             <p class="info">Former Division I Softball coach turned passionate tech student seeking to use proven skills in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
         </div>
 
+        <div> 
+            <img src = "../static/images/name.png" alt = "Test Image" />
+        </div>
+
+
             <!-- Need to fix socials with scrolling -->
         <!-- Socials -->
         <ul class="socials">
