formatted images/need to create slideshow

--- a/portfolio/flask_app/static/style.css
+++ b/portfolio/flask_app/static/style.css
@@ -80,6 +80,20 @@ body {
     padding: 5%;
 }
 
+/* *============ IMAGES ============* */
+
+.images {
+    display: flex;
+    justify-content: space-evenly;
+    margin: auto;
+}
+
+
+
+
+/* *****************************TEST********************** */
+
+
 /* *============ SOCIALS ============* */
 
 
