--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -62,15 +62,31 @@
         </div>
 
         <div class="paragraph">
-            <p class="info">Former Division I Softball coach turned passionate tech student seeking to use proven skills in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
+            <p class="info">Former Division I Softball coach turned passionate tech student seeking to use proven skills
+                in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
         </div>
 
-        <div> 
-            <img src = "../static/images/name.png" alt = "Test Image" />
+        
+        <div class="divider">
+            <hr class="rounded">
+        </div>
+
+        <div class="images">
+            <div class="photoSection">
+                <img class= "rounded" src="../static/images/bigbear.jpg" alt="Test Image" style="max-width: 100px;" />
+            </div>
+            <div class="photoSection">
+            <img class= "rounded" src="../static/images/barrycoaching.jpg" alt="coaching" style="max-width: 100px;" >
+            </div>
+            <div class="photoSection">
+            <img class= "rounded" src="../static/images/Caly.jpg" alt="Caly test image" style="max-width: 100px;" />
+            </div>
         </div>
 
 
-            <!-- Need to fix socials with scrolling -->
+
+
+        <!-- Need to fix socials with scrolling -->
         <!-- Socials -->
         <ul class="socials">
             <li class="liSocials">
