added image captions, needs formatting

--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -66,20 +66,27 @@
                 in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
         </div>
 
-        
+
         <div class="divider">
             <hr class="rounded">
         </div>
 
+        <div class="information">
+            <div class="photo_description"> <u>Things I Love:</u> </div>
+        </div>
+
         <div class="images">
             <div class="photoSection">
-                <img class= "rounded" src="../static/images/bigbear.jpg" alt="Test Image" style="max-width: 100px;" />
+                <img class="rounded" src="../static/images/bigbear.jpg" alt="Test Image" style="max-width: 100px;" />
+                <p style="max-width: 100px; font-size: small;">Traveling</p>
             </div>
             <div class="photoSection">
-            <img class= "rounded" src="../static/images/barrycoaching.jpg" alt="coaching" style="max-width: 100px;" >
+                <img class="rounded" src="../static/images/barrycoaching.jpg" alt="coaching" style="max-width: 100px;">
+                <p style="max-width: 100px; font-size: small;">Softball</p>
             </div>
             <div class="photoSection">
-            <img class= "rounded" src="../static/images/Caly.jpg" alt="Caly test image" style="max-width: 100px;" />
+                <img class="rounded" src="../static/images/Caly.jpg" alt="Caly test image" style="max-width: 100px;" />
+                <p style="max-width: 100px; font-size: small;">My Dog Caly</p>
             </div>
         </div>
 
