--- a/portfolio/flask_app/static/style.css
+++ b/portfolio/flask_app/static/style.css
@@ -82,6 +82,14 @@ body {
 
 /* *============ IMAGES ============* */
 
+.photo_description {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+
 .images {
     display: flex;
     justify-content: space-evenly;
@@ -92,6 +100,7 @@ body {
 
 
 /* *****************************TEST********************** */
+
 
 
 /* *============ SOCIALS ============* */
