added about me, working on projects

--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -26,6 +26,7 @@
         href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,500;1,100&display=swap"
         rel="stylesheet">
 
+    <link rel="icon" href="../static/images/flavicon.png">
     <title>Sophie's Portfolio</title>
 </head>
 
@@ -40,10 +41,10 @@
                         <a class="nav-link" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/projects">Projects</a>
+                        <a class="nav-link" href="#about_me">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">About Me</a>
+                        <a class="nav-link" href="/projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/contact">Contact</a>
@@ -62,8 +63,7 @@
         </div>
 
         <div class="paragraph">
-            <p class="info">Former Division I Softball coach turned passionate tech student seeking to use proven skills
-                in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
+            <p class="info">Former Division I Softball coach turned passionate tech student seeking to use proven skills in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
         </div>
 
 
@@ -71,28 +71,35 @@
             <hr class="rounded">
         </div>
 
-        <div class="information">
-            <div class="photo_description"> <u>Things I Love:</u> </div>
-        </div>
-
-        <div class="images">
-            <div class="photoSection">
-                <img class="rounded" src="../static/images/bigbear.jpg" alt="Test Image" style="max-width: 100px;" />
-                <p style="max-width: 100px; font-size: small;">Traveling</p>
-            </div>
-            <div class="photoSection">
-                <img class="rounded" src="../static/images/barrycoaching.jpg" alt="coaching" style="max-width: 100px;">
-                <p style="max-width: 100px; font-size: small;">Softball</p>
-            </div>
-            <div class="photoSection">
-                <img class="rounded" src="../static/images/Caly.jpg" alt="Caly test image" style="max-width: 100px;" />
-                <p style="max-width: 100px; font-size: small;">My Dog Caly</p>
-            </div>
+        <div class="about_me" id="about_me">
+            <div class="photo_description"> <u>About Me:</u> </div>
         </div>
 
 
 
+        <div class="about_me">
+            <p>Hello! My name is Sophie, and I am a web developer with a diverse background. I specialize in coding with HTML, CSS, and Python to create beautiful, responsive websites that engage users and solve problems. Before transitioning to coding, I spent several years as a pitching coach, helping young athletes refine their skills and achieve their goals. This experience taught me the importance of effective communication, adaptability, and continuous improvement, which I now apply to my work as a developer. I am always seeking new challenges and opportunities to learn, grow, and make a positive impact through technology. I enjoy spending time with my dog Caly, traveling, working out and playing video games. </p>
+        </div>
+        <div class="slideshow">
+            <div id="slider">
+                <figure>
+                    <img src="../static/images/selfpic.jpg" />
+                    <img src="../static/images/bigbear.jpg">
+                    <img src="../static/images/Calysleep.jpg">
+                </figure>
+            </div>
+        </div>
 
+        <div class="divider">
+            <hr class="rounded">
+        </div>
+        <div class="projects" id="projects">
+            <div class="photo_description"> <u>Projects:</u> </div>
+        </div>
+
+
+
+        
         <!-- Need to fix socials with scrolling -->
         <!-- Socials -->
         <ul class="socials">
