added projects, add contact next

--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -44,10 +44,10 @@
                         <a class="nav-link" href="#about_me">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/projects">Projects</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -62,25 +62,20 @@
             <hr class="rounded">
         </div>
 
+            <div class="title"id="about_me"> <u>About Me:</u> </div>
+
+
+
+
         <div class="paragraph">
-            <p class="info">Former Division I Softball coach turned passionate tech student seeking to use proven skills in Python, HTML, CSS and more to meet needs and criteria in a professional setting. </p>
+            <p>Hello! My name is Sophie, and I am a web developer with a diverse background. I specialize in coding with HTML, CSS, and Python to create beautiful, responsive websites that engage users and solve problems.
+                Before transitioning to coding, I spent several years as a pitching coach, helping young athletes refine
+                their skills and achieve their goals. This experience taught me the importance of effective
+                communication, adaptability, and continuous improvement, which I now apply to my work as a developer. I
+                am always seeking new challenges and opportunities to learn, grow, and make a positive impact through
+                technology. I enjoy spending time with my dog Caly, traveling, working out and playing video games. </p>
         </div>
-
-
-        <div class="divider">
-            <hr class="rounded">
-        </div>
-
-        <div class="about_me" id="about_me">
-            <div class="photo_description"> <u>About Me:</u> </div>
-        </div>
-
-
-
-        <div class="about_me">
-            <p>Hello! My name is Sophie, and I am a web developer with a diverse background. I specialize in coding with HTML, CSS, and Python to create beautiful, responsive websites that engage users and solve problems. Before transitioning to coding, I spent several years as a pitching coach, helping young athletes refine their skills and achieve their goals. This experience taught me the importance of effective communication, adaptability, and continuous improvement, which I now apply to my work as a developer. I am always seeking new challenges and opportunities to learn, grow, and make a positive impact through technology. I enjoy spending time with my dog Caly, traveling, working out and playing video games. </p>
-        </div>
-        <div class="slideshow">
+        <div class="slideshow1">
             <div id="slider">
                 <figure>
                     <img src="../static/images/selfpic.jpg" />
@@ -90,16 +85,71 @@
             </div>
         </div>
 
+
+
         <div class="divider">
             <hr class="rounded">
         </div>
-        <div class="projects" id="projects">
-            <div class="photo_description"> <u>Projects:</u> </div>
+
+        <div class="title" id="projects"> <u>Projects:</u> </div>
+
+        <div class="column">
+            <div class="paragraph">
+                <p>I built this portfolio website from scratch using HTML, CSS, Bootstrap, Flask, and Python. It is a work in progress and I will update it as I learn more! Here are some other projects I have made! You can find the code for these projects on my 
+                    <a class="github" href="https://github.com/Soapie14">GitHub</a>.
+                </p>
+            </div>
         </div>
 
 
 
-        
+        <div class="column">
+            <div class="paragraph">
+                <p>My first website I built was a sasquatch sightings website! This was so fun to put together using
+                    HTML, CSS, Bootstrap, MySQL and Flask. This is a blog style website that has a working login and
+                    registration, posts, details and a log out function. </p>
+            </div>
+
+            <div class="slideshow">
+                <div id="slider">
+                    <figure>
+                        <img src="../static/images/projectphotos/Login.PNG" />
+                        <img src="../static/images/projectphotos/home.png">
+                        <img src="../static/images/projectphotos/details.PNG">
+                    </figure>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="column">
+            <div class="paragraph">
+                <p>The second website that I build, I focused a lot more on CSS and Bootstrap to make the front end look
+                    nice. The difference was huge and I absolutely loved making this website look smooth and
+                    professional. This website is also a blog style using HTML, CSS, Bootstrap, Flask, MySQL, and
+                    JavaScript, with working Password encryption, login and registration, posts with edit, delete and
+                    details along with a home page. </p>
+            </div>
+
+            <div class="slideshow">
+                <div id="slider">
+                    <figure>
+                        <img src="../static/images/projectphotos/login2.PNG" />
+                        <img src="../static/images/projectphotos/register2.PNG">
+                        <img src="../static/images/projectphotos/home2.PNG">
+                    </figure>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="divider">
+            <hr class="rounded">
+        </div>
+
+
+
+
         <!-- Need to fix socials with scrolling -->
         <!-- Socials -->
         <ul class="socials">
@@ -116,6 +166,8 @@
         </ul>
 
     </div>
+
+
 </body>
 
 </html>
