--- a/portfolio/flask_app/static/style.css
+++ b/portfolio/flask_app/static/style.css
@@ -73,16 +73,25 @@ body {
 
 /* *============ PARAGRAPH/INFO ============* */
 
-.paragraph {
+.info {
     display: flex;
     justify-content: center;
     margin: auto;
     padding: 5%;
 }
 
+.paragraph {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    padding-left: 5%;
+    padding-right: 5%;
+    font-size: 50%;
+}
+
 /* *============ IMAGES ============* */
 
-.photo_description {
+.title {
     display: flex;
     justify-content: center;
     font-size: 30px;
@@ -99,16 +108,19 @@ body {
 
 
 
-/* *****************************TEST********************** */
+/* *============ SLIDESHOW ============* */
 
 .about_me {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     font-size: 5%;
     margin-left: 15px;
     margin-right: 15px;
+    height: 80%;
+    width: 80%;
 }
-.slideshow{
+
+.slideshow1 {
     display: flex;
     justify-content: center;
     margin: auto;
@@ -117,32 +129,76 @@ body {
 }
 
 #slider {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 @keyframes slider {
-	0% { left: 0; }
-	30% { left: 0; }
-	33% { left: -100%; }
-	63% { left: -100%; }
-	66% { left: -200%; }
-	95% { left: -200%; }
-	100% { left: 0; }
+    0% {
+        left: 0;
+    }
+
+    30% {
+        left: 0;
+    }
+
+    33% {
+        left: -100%;
+    }
+
+    63% {
+        left: -100%;
+    }
+
+    66% {
+        left: -200%;
+    }
+
+    95% {
+        left: -200%;
+    }
+
+    100% {
+        left: 0;
+    }
 }
+
 #slider figure {
-	width:300%;
-	position: relative;
-	animation: 9s slider infinite;
+    width: 300%;
+    position: relative;
+    animation: 9s slider infinite;
 }
 
 #slider figure:hover {
-	/*animation-play-state: paused; enable for pause on hover*/
+    /*animation-play-state: paused; enable for pause on hover*/
 }
+
 #slider figure img {
-	width: 33.333333333%;
-	height : 100%;
-	float: left;
+    width: 33.333333333%;
+    height: 100%;
+    float: left;
 }
+
+/* *============ PROJECTS ============* */
+
+
+
+
+.slideshow {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    height: 20%;
+    width: 20%;
+}
+
+.seperate {
+    display: flex;
+    justify-content: center;
+}
+
+/* *****(PROJECTTEST)******* */
+
+
 /* *============ SOCIALS ============* */
 
 
@@ -153,13 +209,14 @@ HTML CSSResult Skip Results Iframe EDIT ON body {
 }
 
 .socials {
-    margin: 0;
+    margin: 5px;
     padding: 0;
     display: flex;
-    position: absolute;
-    top: 94%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    justify-content: center;
+    /* position: absolute; */
+    /* top: 94%;
+    left: 50%; */
+    /* transform: translate(-50%, -50%); */
 }
 
 .liSocials {
