--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -146,9 +146,12 @@
         <div class="divider">
             <hr class="rounded">
         </div>
-
-
-
+        <div class="title" id="contact"> <u>Contact:</u> </div>
+        
+        <div class="contact_me">
+            <a href = "mailto: slagsoph@isu.edu">Send me an Email</a>
+        </div>
+        <p class="resume">View my Resume</p>
 
         <!-- Need to fix socials with scrolling -->
         <!-- Socials -->
