added resume page

--- a/portfolio/flask_app/templates/index.html
+++ b/portfolio/flask_app/templates/index.html
@@ -32,14 +32,12 @@
 
 <body>
     <div class="body">
+        <a id="top"></a>
 
         <nav class="navbar" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/"></a>
                 <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/">Home</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about_me">About Me</a>
                     </li>
@@ -48,6 +46,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/resume">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -105,9 +106,9 @@
 
         <div class="column">
             <div class="paragraph">
-                <p>My first website I built was a sasquatch sightings website! This was so fun to put together using
+                <p><li>My first website I built was a sasquatch sightings website! This was so fun to put together using
                     HTML, CSS, Bootstrap, MySQL and Flask. This is a blog style website that has a working login and
-                    registration, posts, details and a log out function. </p>
+                    registration, posts, details and a log out function. </p></li>
             </div>
 
             <div class="slideshow">
@@ -124,11 +125,11 @@
 
         <div class="column">
             <div class="paragraph">
-                <p>The second website that I build, I focused a lot more on CSS and Bootstrap to make the front end look
+                <p><li>The second website that I build, I focused a lot more on CSS and Bootstrap to make the front end look
                     nice. The difference was huge and I absolutely loved making this website look smooth and
                     professional. This website is also a blog style using HTML, CSS, Bootstrap, Flask, MySQL, and
                     JavaScript, with working Password encryption, login and registration, posts with edit, delete and
-                    details along with a home page. </p>
+                    details along with a home page. </li></p>
             </div>
 
             <div class="slideshow">
@@ -151,7 +152,7 @@
         <div class="contact_me">
             <a href = "mailto: slagsoph@isu.edu">Send me an Email</a>
         </div>
-        <p class="resume">View my Resume</p>
+        <p class="resume"><a href="/resume">View my Resume</a></p>
 
         <!-- Need to fix socials with scrolling -->
         <!-- Socials -->
@@ -168,9 +169,8 @@
             </li>
         </ul>
 
+
     </div>
-
-
 </body>
 
 </html>
