--- a/portfolio/flask_app/static/style.css
+++ b/portfolio/flask_app/static/style.css
@@ -62,6 +62,7 @@ body {
     display: flex;
     justify-content: center;
     font-size: 80px;
+    margin-bottom: 5%;
 }
 
 
@@ -205,6 +206,7 @@ body {
     justify-content: center;
     /* margin-bottom: 5%; */
 }
+
 .resume {
     display: flex;
     justify-content: center;
@@ -271,6 +273,77 @@ HTML CSSResult Skip Results Iframe EDIT ON body {
     text-shadow: 0 0 5px #A2D2FF;
 }
 
+
+/* *============ RESUME PAGE ============* */
+
+.skills {
+    width: 50%;
+    height: auto;
+    margin-bottom: 5px;
+}
+
+
+/* ********************************TEST******************** */
+
+
+/* Make sure that padding behaves as expected */
+* {box-sizing:border-box}
+
+/* Container for skill bars */
+.container {
+    width: 100%; /* Full width */
+    background-color: rgb(189, 224, 254); /* blue background */
+    border-radius: 25px;
+    padding: 3%;
+}
+
+.skills {
+    text-align: right; /* Right-align text */
+    padding-top: 10px; /* Add top padding */
+    padding-bottom: 10px; /* Add bottom padding */
+    color: white; /* White text color */
+}
+
+.ninety {width: 90%; background-color: #CDB4DB;} /* Green */
+.eighty {width: 80%; background-color: #CDB4DB;} /* Blue */
+.seventy {width: 70%; background-color: #CDB4DB;} /* Dark Grey */
+.sixty {width: 60%; background-color: #CDB4DB;}
+.forty {width: 40%; background-color: #CDB4DB;} /* Red */
+
+.experience{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+.bullets {
+    font-size: 5%;
+}
+
+.resume_row{
+    border-width: 1%;
+    border-radius: 25px;
+    background-color: rgb(189, 224, 254);
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+
+.resume_column {
+    float: left;
+    margin-left: 5%;
+    width: 40%;
+    padding: 10px;
+    height: auto;
+}
+
+  /* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 
 /* *============ MEDIA QUERIES ============* */
