--- a/Projects/challenges/netchix/static/style.css
+++ b/Projects/challenges/netchix/static/style.css
@@ -1,7 +1,12 @@
+/* ******* Roots ******* */
+:root {
+    --primary-color: pink;
+    --primary-font-family: 'Bebas Neue', sans-serif;
+}
+/* ********Web Page Code******* */
 * { 
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 html, body {
@@ -10,16 +15,37 @@ html, body {
 
 body { min-height: 100vh; }
 
-.outer_container{
+
+/* ALL contents */
+.outer_container {
     margin: (0,0,0,0);
     min-height: 600px;
-    background-image: url('../static/background_movies.jpeg');
+    background-color: red;
+    backdrop-filter: brightness(0.5);
+    background-image: url('../static/images/background_movies.jpeg');
     background-repeat: no-repeat;
     background-size: 100%;
-
 }
 
-.background_movie_titles{
-    pass
+.header{
+    display: flex;
+    align-items: center;
 }
 
+.left_nav{
+    text-align: left;
+    padding: 14px 16px;
+    font-size: 17px;
+}
+
+.netchix{
+    font-family: 'Bebas Neue', sans-serif;
+    font-weight: 100;
+    color: var(--primary-color);
+    font-size: 400%;
+    margin-left: 2%;
+}
+
+.right_nav{
+    float: right;
+}
