--- a/Projects/challenges/netchix/flask_app/templates/login.html
+++ b/Projects/challenges/netchix/flask_app/templates/login.html
@@ -19,7 +19,7 @@
             <!-- <img class="background_movie_titles" src="../netchix/static/background_movies.jpeg" alt="Movie Titles"> -->
             <div class="header">
                 <div class="left_nav">
-                    <h1 class="netchix">Netchix</h1>
+                    <h1 class="netchix_logo">Netchix</h1>
                 </div>
                 <div class="right_nav">
                     <div class="header_select">
@@ -29,7 +29,7 @@
                         </select>
                     </div>
                     <div class="sign_in">
-                        <button value="sign_in">Sign in</button>
+                        <button value="sign_in_button" id="sign_in_button">Sign in</button>
                     </div>
             </div>
         </div>
