--- a/Projects/challenges/netchix/flask_app/templates/login.html
+++ b/Projects/challenges/netchix/flask_app/templates/login.html
@@ -16,26 +16,27 @@
 
 <body>
     <div class="outer_container">
-            <!-- <img class="background_movie_titles" src="../netchix/static/background_movies.jpeg" alt="Movie Titles"> -->
-            <div class="header">
-                <div class="left_nav">
-                    <h1 class="netchix_logo">Netchix</h1>
-                </div>
-                <div class="right_nav">
-                    <div class="header_select">
+        <div class="header">
+            <div class="left_nav">
+                <h1 class="netchix_logo">Netchix</h1>
+            </div>
+            <div class="right_nav">
+                <div class="language_container">
                         <select name="language" id="language">
                             <option value="english">English</option>
                             <option value="spanish">Spanish</option>
                         </select>
                     </div>
-                    <div class="sign_in">
-                        <button value="sign_in_button" id="sign_in_button">Sign in</button>
-                    </div>
+                <div class="sign_in">
+                    <button value="sign_in_button" id="sign_in_button">Sign in</button>
+                </div>
             </div>
         </div>
-
-
-
+        <div class="main_title_container">
+            <div class="main_title">
+                <h1>Unlimited movies, TV shows, and more</h1>
+            </div>
+        </div>
     </div>
 </body>
 
