centered main titles div

--- a/Projects/challenges/netchix/flask_app/templates/login.html
+++ b/Projects/challenges/netchix/flask_app/templates/login.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="outer_container">
-        <div class="header">
+        <div class="nav_bar">
             <div class="left_nav">
                 <h1 class="netchix_logo">Netchix</h1>
             </div>
@@ -34,7 +34,13 @@
         </div>
         <div class="main_title_container">
             <div class="main_title">
-                <h1>Unlimited movies, TV shows, and more</h1>
+                <h1 class="header_1">
+                    Unlimited movies, TV shows, and more
+                </h1>
+                <h2 class="header_2">
+                    Watch anywhere. Cancel anytime.
+                </h2>
+                <h2 class="header_2">Ready to watch? Enter your email to create or restart your membership.</h2>
             </div>
         </div>
     </div>
