--- a/Projects/challenges/netchix/flask_app/static/style.css
+++ b/Projects/challenges/netchix/flask_app/static/style.css
@@ -33,11 +33,12 @@ body {
     background-size: 100%;
 }
 
-.header {
+.nav_bar {
     display: flex;
     align-items: center;
 }
 
+/* ###### netchix logo ####### */
 .left_nav {
     position: relative;
 
@@ -45,7 +46,7 @@ body {
     padding: 14px 16px;
     font-size: 17px;
 }
-/* ###### netchix logo ####### */
+
 .netchix_logo {
     font-family: 'Bebas Neue', sans-serif;
     font-weight: 100;
@@ -97,7 +98,24 @@ body {
 
 .main_title_container{
     display: flex;
-    align-items: center;
+    height: 500px;
+    text-align: center;
+}
+
+.main_title{
+    width: 50%;
     margin: auto;
     color: white;
+}
+
+.header_1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 700;
+    margin: auto;
+}
+
+.header_2{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 300;
+    margin-top: 5%;
 }
