--- a/Projects/challenges/netchix/flask_app/templates/login.html
+++ b/Projects/challenges/netchix/flask_app/templates/login.html
@@ -44,6 +44,19 @@
             </div>
         </div>
     </div>
+    <div class="divider">
+        <div class="divider_text_box">
+            <h1 class="header_1">
+                The NetChix you love for just $4.99.
+            </h1>
+            <h2 class="header_2">
+                Get the Standard with ads plan.
+            </h2>
+        </div>
+    </div>
+    <div class="next_page">
+
+    </div>
 </body>
 
 </html>
