--- a/Projects/challenges/netchix/flask_app/templates/login.html
+++ b/Projects/challenges/netchix/flask_app/templates/login.html
@@ -41,6 +41,8 @@
                     Watch anywhere. Cancel anytime.
                 </h2>
                 <h2 class="header_2">Ready to watch? Enter your email to create or restart your membership.</h2>
+                <input type="email" id="email" placeholder="Email Address">
+                <button id="get_started">Get Started</button>
             </div>
         </div>
     </div>
