--- a/Projects/challenges/netchix/flask_app/static/style.css
+++ b/Projects/challenges/netchix/flask_app/static/style.css
@@ -121,6 +121,25 @@ body {
     margin-top: 5%;
 }
 
+#email{
+    width: 200px;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border-radius: 5px;
+    border-color: gray;
+}
+
+#get_started{
+    width: 150px;
+    height: 45px;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    color: white;
+    font-weight: 550;
+    border-color: #dba0aa;
+}
+
 /* #####Gradient Divider ######## */
 
 
